test/fail/asyncret4.mo
func call3<C <: Any>(f : shared query () -> C) : C { f (); };
